# UniSync

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  app_config.toml  main.py  pyproject.toml  requirements.txt  side.py  singular_course.html  test.txt
backend/: .env.example  .gitignore  Cargo.toml  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: config.rs  lib.rs  main.rs  schedule_cache.rs  state.rs
backend/src/api/: cache.rs  mod.rs  token.rs
backend/src/middleware/: mod.rs
backend/src/models/: claims.rs  course.rs  mod.rs  token.rs
backend/supabase/: config.toml
chromium-extension/: .env.example  .gitignore  move-html.js  package-lock.json  package.json  sample-parsed.json  tsconfig.json  vite.config.ts
chromium-extension/src/: manifest.json  vite-env.d.ts
chromium-extension/src/popup/: index.html
chromium-extension/src/popup/scripts/: index.ts
chromium-extension/src/popup/styles/: global.css
chromium-extension/src/scripts/: contentScript.ts  serviceWorker.ts
chromium-extension/src/scripts/types/: course.type.ts
chromium-extension/src/scripts/utils/: extractComponent.ts  extractCourseInfo.ts  extractDates.ts  extractRooms.ts  extractTimings.ts
config/: client_secret.json  deployment.json  token.json
data/sample/: sample-courses.json  sample-weekly-sched.html
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/lib/components/: Header.svelte  NavigationMenu.svelte  Profile.svelte  Toast.svelte
frontend/src/lib/stores/: DeviceStore.ts  JwtTokenStore.ts  SupaStore.ts  (+1 more)
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/: config.py  main.py  parser.py  scraper.py  synchronizer.py  utilities.py  utils.py
src/config/: __init__.py  app_config.py  erp_credentials_config.py  google_oauth_config.py
src/models/: __init__.py  calendar_event.py  course.py  google_calendar_event.py
(+16 files in other folders)
