[project]
name = "UniSync"
version = "0.1.0"
description = "An automation tool that seamlessly syncs your SNU course schedule with GCal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "google-api-python-client>=2.179.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "lxml>=6.0.0",
  "pandas>=2.3.1",
  "python-dotenv>=1.1.1",
  "pytz>=2025.2",
  "selenium>=4.35.0",
]
