[package]
name = "unisync-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
nanoid = "0.4.0"
once_cell = "1.21.3"
poem = "3.1.11"
poem-openapi = { version = "5.1.15", features = [
    "chrono",
    "swagger-ui",
    "uuid",
] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
